core: fix MTU handling while merging/subtracting IP configs (bgo #721420)

https://bugzilla.gnome.org/show_bug.cgi?id=721420
https://bugzilla.redhat.com/show_bug.cgi?id=1047083